--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>OnlineShop</title>
+    <%= display_meta_tags title: @page_title, descriptions: @page_description, keywords: @page_keywords %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "bootstrap",  media: 'all' %>
+    <%= stylesheet_link_tag "flexslider", media: 'all' %>
+    <%= stylesheet_link_tag "memenu",     media: 'all' %>
+    <%= stylesheet_link_tag "style",      media: 'all' %>
+    <%= stylesheet_link_tag "mystyle",    media: 'all' %>
+ 
+    <meta name="viewport", content="width=device-width, initial-scale=1">
+    <meta http-equit="Content-type" content="text/html; charset=utf-8"/>
   </head>
 
   <body>
-    <%= yield %>
+    <!--top-header-->
+    <%= render 'include/main/top_header' %>
+    <!--top-header-->
+
+    <!--start-logo-->  
+    <div class="logo">
+      <%= link_to root_path do %>
+        <h1>Luxury Watches</h1>
+      <% end %>
+    </div>
+    <!--start-logo-->
+
+    <!--bottom-header-->
+    <%= render 'include/main/bottom_header' %>
+    <!--bottom-header-->
+
+    <div class="content">
+      <%= yield %>
+    </div>
+
+    <!--footer-->
+    <%= render 'include/main/footer' %>
+    <!--footer-->
+
+    <script src="<%= asset_path 'application' %>"></script>
   </body>
 </html>
