--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
     <%= render 'include/main/top_header' %>
     <!--top-header-->
 
+    <!--- notifications -->
+    <%= render 'include/main/notifications'%>    
+    <!--- notifications -->
+
     <!--start-logo-->  
     <div class="logo">
       <%= link_to root_path do %>
